# hybrid-search-demo

./: elasticsearch-e5-embeddings-hybrid.ipynb  pyproject.toml  readme.md  requirements.txt
