[tool.poetry]
name = "hybrid-search-demo"
version = "0.1.0"
description = ""
authors = ["Ursin <ursin.brunner@ti8m.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.14"
jupyter = "^1.0.0"
pypdf = "^4.1.0"
sentence-transformers = "^2.6.1"
elasticsearch = "^8.13.0"
langchain-elasticsearch = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
